# HelloCrow

./: .env  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  vcpkg.json
src/: main.cpp
src/auth/: auth.cpp  auth.hpp
src/ping/: ping.cpp  ping.hpp
src/utils/: Utils.cpp
src/version/: version.cpp  version.hpp
